tried to use AWS to track changes but came back to git, pivoted too many times

--- a/movie-app/src/App.css
+++ b/movie-app/src/App.css
@@ -23,3 +23,42 @@ background-size: 200% 100%;
       background-position: 0% 50%;
     }
   }
+
+  .popup{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: linear-gradient(90deg, rgba(0,6,36,1) 0%, rgba(44,77,139,1) 76%, rgba(97,185,203,1) 100%);
+background-size: 200% 100%;
+    animation: grad 10s ease-in-out infinite;
+    overflow-y: scroll;
+
+  }
+
+  .popup .content{
+    display: block;
+    width: 100%;
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 25px;
+    color: white;
+  }
+
+  .popup .content h2{
+
+    font-size: 28px;
+    font-weight: 20px;
+  }
+  .popup .content h2 span {
+    font-weight: 300;
+    font-size: 20px;
+
+  }
+
+  .popup .content .close{
+    display: inline-block;
+    padding: 15px;
+    color: white;
+  }
