--- a/movie-app/src/Components/MovieCard.css
+++ b/movie-app/src/Components/MovieCard.css
@@ -7,6 +7,7 @@
     cursor: pointer;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
     
     
 
@@ -17,6 +18,7 @@
 
 .moviecard:hover{
 transform: scale(1.05);
+
 
 
 }
@@ -45,7 +47,6 @@ transform: scale(1.05);
     font-family: 'Abel', sans-serif;
     font-size: x-small;
     justify-content: space-between;
-    background-color: ;
 }
 .overview > p{
     font-family: 'Abel', sans-serif;
@@ -68,4 +69,24 @@ transform: scale(1.05);
 .moviecard:hover .movie_description{
     transform: translateY (0%);
 
+}
+
+.likes{
+    display: inline-flex;
+    background: transparent;
+    font-family: 'Abel', sans-serif;
+    font-size: small;
+    border-radius: 2px;
+    border: 1px solid rgba(97, 255, 97, 0.6);
+    color: rgba(97, 255, 97, 0.9);;
+    margin: 10px;
+    padding: 3px;
+    justify-content: space-between;
+ 
+}
+
+.likebutton{
+  
+    display: inline;
+    transform: scale(.7);
 }
